kubernetes/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: park-connect
  labels:
    app: park-connect
spec:
  ports:
    - port: 8080
      name: park-connect-port
  selector:
    app: park-connect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: park-connect
  labels:
    app: park-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: park-connect
  template:
    metadata:
      labels:
        app: park-connect
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scheme: http

    spec:
      containers:
      - name: park-connect
        image: docker.io/robinfoe/park-connect
        ports:
        - containerPort: 8080
        command: ["java"]
        args: ["-jar", "-Dspring.config.location=file:/app/config/app.properties", "park-connect.jar"]
        volumeMounts:
        - name: app-config
          mountPath: /app/config/
        - name: keys-config
          mountPath: /app/keys
      volumes:
      - name: app-config
        configMap:
          name: app-cfg
      - name: keys-config
        configMap:
          name: keys-config

## TODO :: configmap, secret, etc...
